fix: fixed truncate labels in VerticalNavigation

--- a/src/components/VerticalSection/styles.scss
+++ b/src/components/VerticalSection/styles.scss
@@ -10,4 +10,7 @@
     font-size: 0.9375rem;
     color: $color-brand;
     text-transform: uppercase;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
